// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: blue;
}

.emotion-0 use {
  pointer-events: none;
}

<svg
    aria-label="test icon"
    class="emotion-0"
    data-cy="icon"
    height="48"
    preserveAspectRatio="xMinYMin meet"
    role="img"
    viewBox="0 0 48 48"
    width="48"
  >
    <use
      xlink:href="#system-arrow-down"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon renders display block 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
  display: block;
}

.emotion-0 use {
  pointer-events: none;
}

<svg
    aria-label="system-arrow-down icon"
    class="emotion-0"
    data-cy="icon"
    height="24"
    preserveAspectRatio="xMinYMin meet"
    role="img"
    viewBox="0 0 24 24"
    width="24"
  >
    <use
      xlink:href="#system-arrow-down"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  fill: currentColor;
}

.emotion-0 use {
  pointer-events: none;
}

<svg
    aria-label="system-arrow-down icon"
    class="emotion-0"
    data-cy="icon"
    height="24"
    preserveAspectRatio="xMinYMin meet"
    role="img"
    viewBox="0 0 24 24"
    width="24"
  >
    <use
      xlink:href="#system-arrow-down"
    />
  </svg>
</DocumentFragment>
`;
